updated css  -found a solution for img height

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
     <div class="photo-presentation">
         <img src="./images/photo_portfolio-web.png" alt="a portrait of luana">
     </div>
-    <!--   -->
+   
 </main>
+ <!-- END OF MAIN  -->
 
-
-<!-- SCROLL  -->
+<!-- SCROLL DOWN  -->
 <div class="scroll-down d-flex">
     <p><a href="#projects"><i class="fas fa-angle-double-down"></i> Scroll down <i class="fas fa-angle-double-down"></i></a></p>
 </div>
 
 <!-- SECTION WITH PRESENTATION OF 3 PROJECTS -->
-<section class="images-projects d-flex" id="projects">
+<section class="images-projects d-grid" id="projects">
     <aside class="d-flex">
         <h2>Front End & Webdesign projects</h2>
     </aside>
