--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                     <span class="bottom"></span>
                     <span class="circle"></span>
                 </button>
-    
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
@@ -206,8 +205,8 @@
 
   <!-- T2 -->
 
-    <ul class="soft-skills"> 
-      <h3 class="mb-5">Soft-Skills</h3>
+    <ul class="soft-skills text-center"> 
+      <h3 class="my-5">Soft-Skills</h3>
 
       <li>Creativity</li>
       <li>Communication</li>
@@ -218,8 +217,8 @@
     </ul>
 
 
-    <div class="hard-skills text-left">
-        <h3>Hard Skills & Languages</h3>
+    <div class="hard-skills text-center">
+        <h3 class="my-5">Hard Skills & Languages</h3>
        
     <p class="fs-3">I speak <span>English</span>, <span>German</span> and <span>French</span> fluently.</p>
     <p class="fs-3">I have knowledge in Photoshop, Illustrator and Video Editing.
