--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a id="top"></a>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                  <a class="navbar-brand nav-link active" href="./index.html"> <img src="./images/madikera-tech-logo-3.png" alt="logo madikera tech" class="img-fluid" style="width: 150px;height: 150px;"> </a>
+                  <a class="navbar-brand nav-link active" href="./index.html"> <img src="./images/madikera-tech-logo-3.png" alt="logo madikera tech" class="img-fluid ms-5" style="width: 150px;height: 150px;"> </a>
     
                 <button class="button-style navbar-toggler clear-menu-btn p-0 m-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <!-- <span class=" navbar-toggler-icon"></span> -->
